--- a/app/common/components/form_register/form_register.html
+++ b/app/common/components/form_register/form_register.html
@@ -1,11 +1,15 @@
+
 <form name="form" novalidate>
+
+
 	<label for="email">Email</label>
 	<input id="email" name="email" type="email" ng-model="user.email" placeholder="youremail@provider.fr" ng-model-options="{ debounce: 250 }" required/>
-	<span ng-show="form.email.$error.email">Invalid email address</span>
+	<span ng-messages="form.email.$error" ng-messages-include="{{errorsFile}}"></span>
 	<br/>
 	<label for="password">Password</label>
 	<input id="password" name="password" type="password" ng-model="user.password" placeholder="Password" ng-minlength="passwordMinLength" required/>
-	<span ng-show="form.password.$error.minlength">Password should contain at least {{passwordMinLength}} characters</span>
+	<!-- <span ng-show="form.password.$error.minlength">Password should contain at least {{passwordMinLength}} characters</span> -->
+	<span ng-messages="form.password.$error" ng-messages-include="{{errorsFile}}"></span>
 	<br/>
 	<label for="password_confirmation">Password confirm</label>
 	<input id="password_confirmation" type="password" ng-model="user.password_confirmation" required/>
